# apple-client-secret

./: pyproject.toml
src/apple_client_secret/: main.py
